src/main/java/org/example/chatssecretos/domain/errors/ErrorAppGroup.java
package org.example.chatssecretos.domain.errors;

public enum ErrorAppGroup implements ErrorApp {
    GROUP_NAME_NOT_AVAILABLE,
    GROUP_NOT_FOUND,
    NO_MATCHING_GROUP,
    CREATE_FIELDS_INCORRECT,
    INCORRECT_PASSWORD,
}
